--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: update stars
 on:
   schedule:
-  - cron: 30 0 * * *
+  - cron:  0/1 * * *
 jobs:
   awesome-stars:
     name: update awesome-stars
