fix action error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
 name: update stars
 on:
+  workflow_dispatch:
   schedule:
-  - cron:  0/1 * * *
+    - cron: '0 */6 * * *'
 jobs:
   awesome-stars:
     name: update awesome-stars
