update at 08:00 CST – China Standard Time

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: update stars
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '00 0 * * *'
 jobs:
   awesome-stars:
     name: update awesome-stars
